fix shelf publish helptext alignment

--- a/src/media/css/create.styl
+++ b/src/media/css/create.styl
@@ -49,7 +49,6 @@
 }
 
 form {
-
     fieldset {
         input {
             display: none;
@@ -127,8 +126,6 @@ form {
             }
         }
     }
-
-
 
     .background-image .inner {
         display: inline-block;
@@ -266,25 +263,21 @@ form {
                 color: $sailor-blue;
             }
         }
-
         [data-rating="2"] {
             .star-1, .star-2 {
                 color: $sailor-blue;
             }
         }
-
         [data-rating="3"] {
             .star-1, .star-2, .star-3 {
                 color: $sailor-blue;
             }
         }
-
         [data-rating="4"] {
              .star-1, .star-2, .star-3, .star-4 {
                 color: $sailor-blue;
             }
         }
-
         [data-rating="5"] {
             .star-1, .star-2, .star-3, .star-4, .star-5 {
                 color: $sailor-blue;
@@ -299,7 +292,10 @@ form {
             position: relative;
         }
     }
-
+    .publish-help.help-text {
+        margin: 10px 0 15px 0;
+        text-align: left;
+    }
 }
 
 .fake-field {
